@@ -35,8 +35,8 @@ import java.util.*;
 
 /**
  *  The body of a Tapestry page.  This is used since it allows components on the
- *  page access to an initialization function (that is written at the end, just before
- *  the &lt;/body&gt; tag).  This is current used by {@link Rollover}.
+ *  page access to an initialization script (that is written the start, just before
+ *  the &lt;body&gt; tag).  This is currently used by {@link Rollover}.
  *
  *  @author Howard Ship
  *  @version $Id$
@@ -48,6 +48,7 @@ public class Body extends AbstractComponent
 	private List imageLines;
 	private int uniqueId;
 	private List otherScript;
+    private List otherInitialization;
 
 	private static final String ATTRIBUTE_NAME = 
 		"com.primix.tapestry.components.Body";
@@ -79,6 +80,23 @@ public class Body extends AbstractComponent
 		imageLines.add(variableName + ".src = \"" + URL + '"');
 	}
 
+    /**
+     *  Adds other initialization, in the form of additional statements
+     *  to execute from the body's <code>onLoad</code> event
+     *  handler.  The final script generated by the Body component
+     *  will add indentation before the statement and a semicolon after.
+     *
+     */
+
+    public void addOtherInitialization(String statement)
+    {
+        if (otherInitialization == null)
+            otherInitialization = new ArrayList();
+
+        otherInitialization.add(statement);
+    }
+
+
 	/**
 	 *  Adds additional scripting code to the page.  This code
 	 *  will be added to a large block of scripting code at the
@@ -93,6 +111,10 @@ public class Body extends AbstractComponent
 	 *  the &lt;script&gt; block generated by this <code>Body</code> component.
 	 *  The script should <em>not</em> contain HTML comments, those will
 	 *  be supplied by the Body component.
+     *
+     *  <p>A frequent use is to add an initialization function using
+     *  this method, then cause it to be executed using
+     *  {@link #addOtherInitialization(String)}.
 	 *
 	 */
 	 
@@ -141,7 +163,8 @@ public class Body extends AbstractComponent
 	throws RequestCycleException
 	{
 		IResponseWriter nested;
-		
+		String onLoadName;
+
 		if (cycle.getAttribute(ATTRIBUTE_NAME) != null)
 			throw new RequestCycleException(
 				"Body components may not be nested.",
@@ -150,6 +173,7 @@ public class Body extends AbstractComponent
 		cycle.setAttribute(ATTRIBUTE_NAME, this);
 
 		imageLines = null;
+        otherInitialization = null;
 		uniqueId = 0;
 
 		try
@@ -160,12 +184,16 @@ public class Body extends AbstractComponent
 
 			// Write the script (i.e., just before the <body> tag.
 			
-			writeScript(writer);
+			onLoadName = writeScript(writer);
 			
 			// Start the body tag.
 			
 			writer.begin("body");
 			generateAttributes(cycle, writer, reservedNames);
+
+            if (onLoadName != null)
+                writer.attribute("onLoad",
+                    "javascript:" + onLoadName + "();");
 
 			// Close the nested writer, which dumps its buffered content
 			// into its parent.
@@ -178,6 +206,7 @@ public class Body extends AbstractComponent
 		{
 			imageLines = null;
 			otherScript = null;
+            otherInitialization = null;
 		}
 
 	}
@@ -189,53 +218,50 @@ public class Body extends AbstractComponent
 	*  #addOtherScript(String)}.
 	*
     *  <p>The script is written just before the &lt;body&gt; tag.
+    *
+    *  <p>If there are any other initializations 
+    * (see {@link #addOtherInitialization(String)}),
+    * then a function to execute them is created, and its name
+    * is returned.
 	*/
 
 
-	protected void writeScript(IResponseWriter writer)
+	protected String writeScript(IResponseWriter writer)
 	{
-		StringBuffer buffer;
 		Iterator i;
-		String line;
-		String script;
+        String result = null;
 
 		// Write no script if there's no tapestry images or
 		// other script initializations.
 		
-		if (imageLines == null && otherScript == null)
-			return;
+		if (imageLines == null && 
+		    otherScript == null && 
+		    otherInitialization == null)
+			return null;
 
-		buffer = new StringBuffer();
+        writer.begin("script");
+        writer.attribute("language", "javascript");
+
+        writer.printRaw("<!--\n\n");
 
 		if (imageLines != null)
-			buffer.append("  var tapestry_preload = new Array();\n\n");
+        {
 
-		if (imageLines != null)
-		{
-			buffer.append("  if (document.images)\n" +
-				"  {\n");
+			writer.printRaw("  var tapestry_preload = new Array();\n" +
+			                "  if (document.images)\n" +
+	                        "  {\n");
 
 			i = imageLines.iterator();
 			while (i.hasNext())
 			{
-				line = (String)i.next();
-
-				buffer.append("    ");
-				buffer.append(line);
-				buffer.append(";\n");
+				writer.printRaw("    ");
+				writer.printRaw((String)i.next());
+				writer.printRaw(";\n");
 			}
 
-			buffer.append("  }");
+			writer.printRaw("  }");
 		}
 
-		writer.begin("script");
-		writer.attribute("language", "javascript");
-
-		writer.printRaw("<!--\n\n");
-
-		// Print out all the stuff related to pre-loading images.
-		
-		writer.printRaw(buffer.toString());
 
 		// If there are other scripts (from Rollovers, or whatever),
 		// emit them now.
@@ -245,12 +271,29 @@ public class Body extends AbstractComponent
 			i = otherScript.iterator();
 			while (i.hasNext())
 			{
-				script = (String)i.next();
-				
 				writer.printRaw("\n\n");
-				writer.printRaw(script);
+				writer.printRaw((String)i.next());
 			}
 		}
+
+        if (otherInitialization != null)
+        {
+            result = "onLoad_" + getIdPath().replace('.', '_');
+
+            writer.printRaw("\n\n" +
+                            "  function " + result + "()\n" +
+                            "  {\n");
+
+            i = otherInitialization.iterator();
+            while (i.hasNext())
+            {
+                writer.printRaw("    ");
+                writer.printRaw((String)i.next());
+                writer.printRaw(";\n");
+            }
+
+            writer.printRaw("  }");
+        }
 
 		// Now, close the HTML comment (used to fake out archaic browsers) and
 		// the <script> element.`
@@ -258,5 +301,7 @@ public class Body extends AbstractComponent
 		writer.printRaw("\n\n// -->");
 		
 		writer.end(); // <script>
+
+        return result;
 	}
 }
